--- a/webServer/package.json
+++ b/webServer/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gentooslasta/backend.git"
+    "url": "htt..............................................................................................................................................................ps://github.com/gentooslasta/backend.git"
   },
   "keywords": [
     "webserver",
